--- a/responsive/project-1/index.html
+++ b/responsive/project-1/index.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
-    <header>
         <div class="hide">
-            <p>IT Solutuins and Conculting</p>
-        </div>
+                <p>IT Solutuins and Conculting</p>
+            </div>
+    <header>
+            
         <div class="container">
             <h1>Cubic A</h1>
         </div>
@@ -31,34 +32,44 @@
                     </div>
                     <div class="card">
                         <img src="./img/ERP.svg">
-                        <h4>Cyber ERP Solutions</h4>
+                        <h4>ERP Solutions</h4>
                     </div>
                     <div class="card">
                         <img src="./img/cctv.svg">
-                        <h4>Cyber CCTV Solutions</h4>
+                        <h4>CCTV Solutions</h4>
                     </div>
                 </div>
                 <!-- FLEX-ITEM-2  -->
-                <div id="item-2" class="flex-item col-fluid">
-                    This flex-item fills any available speace.
+                <div id="item-2" class="flex-item flex-container col-fluid">
+                        <h2>Make your IT Infrastructure <br>more Robust!</h2>
+                        <img src="./img/illustration.svg" >
+                        <button><h3>Reach Us Today!</h3></button>
                 </div>
                 <!-- FLEX-ITEM-3  -->
                 <div id="item-3" class="flex-item col-20">
-                    This flex-item fills 20% of the parent's width
+                    <div><a href="#"><h4>HOME</h4></a></div>
+                    <div><a href="#"><h4>SERVICES</h4></a></div>
+                    <div><a href="#"><h4>LOCATION</h4></a></div>
                 </div>
             </section>
-            <section class="flex-container">
+            <section class="flex-container" >
                 <!-- FLEX-ITE4  -->
                 <div id="item-4" class="flex-item col-fluid">
-                    This flex-item fills any available speace.
+                    <div>
+                        <h2>IT consulting services</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
                 </div>
                <!-- FLEX-ITEM-5  -->
-                <div id="item-5" class="flex-item col-20">
-                    This flex-item fills 20% of the parent's width
+                <div id="item-5" class="flex-item  col-20">
+                        <div><h4>crm@cubica.com</h4><img src="./img/email.svg"></div>
+                        <div><h4>+44 7700 900796</h4><img src="./img/phone.svg"></div>
+                        <div><a href="#" style="text-decoration: underline;"><h4>VISIT US</h4></a><img src="./img/pin.svg"></div>
                 </div>
             </section>
         </div>
     </main>
+    <script src="./app.js"></script>
 </body>
 
 </html>
