--- a/responsive/project-1/index.html
+++ b/responsive/project-1/index.html
@@ -48,8 +48,11 @@
                 <!-- FLEX-ITEM-3  -->
                 <div id="item-3" class="flex-item col-20">
                     <div><a href="#"><h4>HOME</h4></a></div>
-                    <div><a href="#"><h4>SERVICES</h4></a></div>
-                    <div><a href="#"><h4>LOCATION</h4></a></div>
+                    <div><a href="#"><h4>OUR SERVICES</h4></a></div>
+                    <div><a href="#"><h4>OUR TEAM</h4></a></div>
+                    <div><a href="#"><h4>ABOUT US</h4></a></div>
+                    <div><a href="#"><h4>CONTACT US</h4></a></div>
+
                 </div>
             </section>
             <section class="flex-container" >
@@ -69,7 +72,6 @@
             </section>
         </div>
     </main>
-    <script src="./app.js"></script>
 </body>
 
 </html>
