--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 <li>Pagination</li>
                 <li>Lazy Load Placeholders</li>
                 <li>Parallax</li>
+                <li>Drag and Drop</li>
                 <li>PROJECT-1</li>
                 <li>PROJECT-2</li>
             </ul>
