--- a/responsive/project-2/index.html
+++ b/responsive/project-2/index.html
@@ -6,26 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
-    <title>Desktop-first design</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>Mobile-first design</title>
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1>This is a mobile first design approach</h1>
+            <h1>Savant Academy</h1>
         </div>
     </header>
     <main>
-        <div class="container">
-            <main id="top">
-                <div class="flex-item">11</div>
-                <div class="flex-item">11</div>
-                <div class="flex-item">11</div>
-                <div class="flex-item">11</div>
+        <div class="container flex-container">
+            <main>
+                <div id="top">
+                    <h1>Learn with Savant Academy</h1>
+                    <img src="./img/books.svg">
+                </div>
+                <div>11</div>
+                <div>11</div>
+                <div>11</div>
             </main>
-            <aside id="bottom">
-                    <div class="flex-item">222</div>
-                    <div class="flex-item">222</div>
+            <aside>
+                    <div>222</div>
+                    <div>222</div>
             </aside>
         </div>
     </main>
