savant academy final

--- a/responsive/project-2/index.html
+++ b/responsive/project-2/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Mobile-first design</title>
 </head>
@@ -14,23 +16,89 @@
 <body>
     <header>
         <div class="container">
-            <h1>Savant Academy</h1>
+            <img src="./img/logo.svg" width="90"><h1>Savant Academy</h1>
         </div>
     </header>
     <main>
         <div class="container flex-container">
             <main>
+                <!-- TOP  -->
                 <div id="top">
                     <h1>Learn with Savant Academy</h1>
                     <img src="./img/books.svg">
                 </div>
-                <div>11</div>
-                <div>11</div>
-                <div>11</div>
+                <!-- CARDS  -->
+                <div id="cards" class=" flex-container">
+                    <div class="card">
+                        <img src="./img/wallet.svg" >
+                        <h3>a more affordable route</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/job.svg" >
+                        <h3>Placement Support</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/time.svg" >
+                        <h3>Flexible learning hours</h3>
+                    </div>
+                </div>
+                <!-- PARAGRAPHS  -->
+                <div id="para" class="text">
+                    <h1>WHY SAVANT?</h1>
+                    <div>
+                        <h2>100% Online</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+
+                    <div>
+                        <h2>All-Inclusive Pricing</h2>
+                        <p>Mauris a diam maecenas sed enim ut. Scelerisque varius morbi enim nunc faucibus a pellentesque sit. </p>
+                    </div>
+
+                    <div>
+                        <h2>Job-Focused Programs</h2>
+                        <p>Etiam non quam lacus suspendisse faucibus interdum posuere. 
+                            </p>
+                    </div>
+
+                    <div>
+                        <h2>Flexible Method of Study</h2>
+                        <p>Enim tortor at auctor urna. Nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. </p>
+                    </div>
+
+                    <div>
+                        <h2>Affordable Tuition</h2>
+                        <p>Massa enim nec dui nunc. Eget mi proin sed libero. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. </p>
+                    </div>
+                </div>
             </main>
+            <!-- ASIDE  -->
             <aside>
-                    <div>222</div>
-                    <div>222</div>
+                    <div>
+                        <h3>Degrees & Undergraduate Certificates</h3>
+                        <ul class="list">
+                            <li>Bachelor's Degrees</li>
+                            <li>Associate Degrees</li>
+                            <li>Undergraduate Certificates</li>
+                        </ul>
+                    </div>
+
+
+                    <div>
+                        <h3>Career Diplomas </h3>
+                        <ul class="list">
+                            <li>Automotive</li>
+                            <li>Business</li>
+                            <li>Creative/Design</li>
+                            <li>Education</li>
+                            <li>Engineering</li>
+                            <li>Health Services</li>
+                            <li>High School</li>
+                            <li>Legal Studies</li>
+                            <li>Technology</li>
+                            <li>Trade</li>
+                        </ul>
+                    </div>
             </aside>
         </div>
     </main>
