--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li>Transform</li>
                 <li>Filters</li>
                 <li>Blend Modes</li>
-                <li><a href="./Advanced-CSS/projects/panda/">PROJECT-1: Panda Illustration</a></li>
+                <li><a href="./Advanced-CSS/projects/panda/index.html">PROJECT-1: Panda Illustration</a></li>
             </ul>
         </section>
         
