--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 <li><a href="./responsive/media-queries/">Media Queries</a></li>
                 <li><a href="./responsive/responsive-layout/">Responsive Layout</a></li>
                 <li><a href="./responsive/desktop-first/">Desktop First Design</a></li>
-                <li>PROJECT-1: Set up</li>
+                <li><a href="./responsive/project-1-setup/">PROJECT-1: Set up</a></li>
                 <li><a href="./responsive/cubic-a/">PROJECT-1: Cubic A</a></li>
                 <li><a href="./responsive/mobile-first/">Mobile First Design</a></li>
-                <li>PROJECT-2: Set up</li>
+                <li><a href="./responsive/project-2-setup/">PROJECT-2: Set up</a></li>
                 <li><a href="./responsive/savant-academy/">PROJECT-2: Savant Academy</a></li>
                 <li><a href="./responsive/project-3-setup/">PROJECT-3: Set up</a></li>
                 <li><a href="./responsive/cooks-hub/">PROJECT-3: Cooks Hub</a></li>
