mobile first layout

--- a/responsive/project-1-setup/index.html
+++ b/responsive/project-1-setup/index.html
@@ -32,7 +32,7 @@
         <section>
             <ul>
                 <li>This project targets large screens for the initial design. <br>
-                Later, media queries are added to adjust the design for smaller screens.</li>
+                Later, media queries are added to scale down the design for smaller screens.</li>
             </ul>
         </section>
         <section>
