--- a/responsive/project-2-setup/index.html
+++ b/responsive/project-2-setup/index.html
@@ -19,7 +19,7 @@
         <h1 class="title">Project Setup</h1>
         <section>
            <ul>
-            <li>Before starting to code any web app, it's a good practice to sketch the
+            <li>Before starting to code any webpage, it's a good practice to sketch the
                 layout on paper first.
             </li>
             <br>
@@ -28,22 +28,22 @@
             <li>FLEX allows to build web pages that are responsive to large and small screen sizes. </li>
            </ul>
         </section>
-        <h1 class="title">desktop-first design</h1>
+        <h1 class="title">mobile-first design</h1>
         <section>
             <ul>
-                <li>This project targets large screens for the initial design. <br>
-                Later, media queries are added to adjust the design for smaller screens.</li>
+                <li>This project targets smaller screens for the initial design. <br>
+                Later, media queries are added to scale up the design for large screens.</li>
             </ul>
         </section>
         <section>
-            <h2>Large screens layout</h2>
-            <img src="./SVG/large-screen.svg" style="display: block; margin: auto;">
+            <h2>Small screens layout</h2>
+            <img src="./SVG/small-screen.svg" style="display: block; margin: auto; width:60%;">
         </section>
 
         <section>
-                <h2>Smaller screens layout</h2>
-                <p>Media queries written to make the layout fit smaller screens</p>
-                <img src="./SVG/small-screen.svg" style="display: block; margin: auto; width:60%;">
+                <h2>larger screens layout</h2>
+                <p>Media queries written to distribute the layout on larger screens.</p>
+                <img src="./SVG/large-screen.svg" style="display: block; margin: auto; ">
             </section>
     
 
