--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <ul>
                 <li>CSS Rules and Variables</li>
                 <li>CSS Functions</li>
-                <li>Transform</li>
+                <li><a href="./advanced-CSS/transform/">Transform</a></li>
                 <li>Filters</li>
                 <li>Blend Modes</li>
                 <li><a href="./Advanced-CSS/projects/panda/index.html">PROJECT-1: Panda Illustration</a></li>
