--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h1 class="title">Animation</h1>
         <section>
             <ul>
-                <li>Transition</li>
+                <li><a href="./animation/transition/">Transition</a></li>
                 <li>Keyframes</li>
                 <li>Microinteractions</li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
