--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         <section>
             <ul>
                 <li><a href="./animation/transition/">Transition</a></li>
-                <li>Keyframes</li>
+                <li><a href="./animation/concepts/">Animation Concepts</a></li>
+                <li><a href="./animation/keyframes/">Animation and Keyframes</a></li>
                 <li>Microinteractions</li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
@@ -119,7 +120,10 @@
                 <li>Dropdown Menu</li>
                 <li>Mega menu </li>
                 <li>accordion menu</li>
+                <li>Page transition animation</li>
                 <li>Tooltip</li>
+                <li>Popup message</li>
+                <li>Highlighting pulsal</li>
                 <li>Progress Bar</li>
                 <li>Search with Autocomplete</li>
                 <li>Modal</li>
