--- a/advanced-CSS/transform/index.html
+++ b/advanced-CSS/transform/index.html
@@ -198,6 +198,30 @@
         </ul>
 
         </section>
+        <h1 class="title">Transform Origin</h1>
+        <section>
+                <ul>
+                    <li><code>transform-origin: x-axis -y-axis;</code></li>
+                </ul>
+                <div class="grid" style="--grid:5;">
+                    <div>x-axis</div>
+                    <div>[number][unit]</div>
+                    <div>center</div>
+                    <div>left</div>
+                    <div>right</div>
+                    <div>y-axis</div>
+                    <div>[number][unit]</div>
+                    <div>center</div>
+                    <div>top</div>
+                    <div>bottom</div>
+    
+                </div>
+                <br>
+                <div class="border">
+                        <div id="transform-origin" class="box">BOX</div>
+                </div>
+                <br>
+            </section>
 
 
 
