--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <ul>
                 <li><a href="./animation/transition/">Transition</a></li>
                 <li><a href="./animation/concepts/">Animation Concepts</a></li>
-                <li><a href="./animation/keyframes/">Animation and Keyframes</a></li>
+                <li><a href="./animation/keyframes/">Keyframes in CSS</a></li>
                 <li>Microinteractions</li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
