--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <li><a href="./animation/transition/">Transition</a></li>
                 <li><a href="./animation/concepts/">Animation Concepts</a></li>
                 <li><a href="./animation/keyframes/">Keyframes in CSS</a></li>
+                <li><a href="./animation/animations/"></a></li>
                 <li>Microinteractions</li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
