--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <li><a href="./animation/concepts/">Animation Concepts</a></li>
                 <li><a href="./animation/keyframes/">Keyframes in CSS</a></li>
                 <li><a href="./animation/animations/">Animation</a></li>
+                <li><a href="./animation/sandbox/">Animation Sandbox</a></li>
                 <li>Microinteractions</li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
