--- a/animation/sandbox/index.html
+++ b/animation/sandbox/index.html
@@ -7,6 +7,8 @@
     <link href="./style/style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
     <title>Sandbox</title>
 </head>
 <body>
@@ -112,9 +114,9 @@
 
 
     <div style="display: block; margin: auto;">
-            <button id="play">PLAY</button>
-            <button id="remove">STOP</button>
-            <button id="reset">RESET</button>
+            <button id="play"><i class="fas fa-play"></i></button>
+            <button id="remove"><i class="fas fa-stop"></i></button>
+            <button id="reset"><i class="fas fa-undo-alt"></i></button>
     </div>
     <div id="box"  ></div>
 
