--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <li><a href="./animation/keyframes/">Keyframes in CSS</a></li>
                 <li><a href="./animation/animations/">Animation</a></li>
                 <li><a href="./animation/sandbox/">Animation Sandbox</a></li>
-                <li>Microinteractions</li>
+                <li><a href="./animation/microinteractions/">Microinteractions</a></li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
         </section>
