icons with text

--- a/animation/microinteractions/index.html
+++ b/animation/microinteractions/index.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./style/style.css" rel="stylesheet" type="text/css"/>
-    <title>Document</title>
+    <link href="./style/style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;600&family=Nixie+One&family=Open+Sans:wght@300;400;600;700;800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    microinteractions: 
+
+
+    <section>
+        <div class="container">
+            <h1>Microinteractions</h1>
+            <p> are subtle animations and transitions that may go unnoticed
+                yet create an intuitive and interactive design, by providing feedback to the user
+                to create a great user experience.</p>
+
+        </div>
+    </section>
+
+    <section id="hover">
+        <div class="container">
+            <h1>Hover</h1>
+            <p>Highlight the item the is being hovered over
+                to indicate user's location or that further actions can be taken.</p>
+
+
+            <ul class="list">
+                <li>First item </li>
+                <li>Second item </li>
+                <li>Third item </li>
+                <li>Forth item </li>
+            </ul>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+    <section id="active">
+        <div class="container">
+            <h1>Active</h1>
+            <p>Lets the user make sure a particular item has been selected</p>
+
+
+            <ul class="list">
+                <li>First item </li>
+                <li>Second item </li>
+                <li>Third item </li>
+                <li>Forth item </li>
+            </ul>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+    <section id="add">
+        <div class="container">
+            <h1>Icons with Text</h1>
+            <p>Let icons speak up for themselves.</p>
+
+
+            <div class="wrapper">
+                <div class="icon" data-text="ADD">
+                    <i class="fas fa-plus"></i>
+                </div>
+
+                <div class="icon" data-text="REMOVE">
+                    <i class="far fa-trash-alt"></i>
+                </div>
+
+                <div class="icon" data-text="SEND">
+                        <i class="fas fa-paper-plane"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
