--- a/animation/microinteractions/index.html
+++ b/animation/microinteractions/index.html
@@ -95,6 +95,31 @@
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+    <section id="bar">
+            <div class="container">
+                <h1>Progress Bar</h1>
+                <p>A progress bar growing in a linear manner does not convey as much
+                    as the one growing in a variable speed.
+                </p>
+
+                <div class="flex-container">
+                        <div class="send">SEND</div>
+                        <div class="bar">
+                                <div class="line"></div>
+                            </div>
+                </div>
+ 
+            </div>
+    </section>
+    <script src="app.js"></script>
 </body>
 
 </html>
