load button changed

--- a/animation/microinteractions/index.html
+++ b/animation/microinteractions/index.html
@@ -111,7 +111,7 @@
                 </p>
 
                 <div class="flex-container">
-                        <div class="send">SEND</div>
+                        <div class="send">LOAD</div>
                         <div class="bar">
                                 <div class="line"></div>
                             </div>
