--- a/animation/microinteractions/index.html
+++ b/animation/microinteractions/index.html
@@ -106,8 +106,10 @@
     <section id="bar">
             <div class="container">
                 <h1>Progress Bar</h1>
-                <p>A progress bar growing in a linear manner does not convey as much
-                    as the one growing in a variable speed.
+                <p>
+                    A progress bar growing in variable speed conveys more information
+                    than the one growing in a linear manner. It reassures the user 
+                    that the loading process is actually happening.
                 </p>
 
                 <div class="flex-container">
@@ -119,6 +121,34 @@
  
             </div>
     </section>
+
+
+
+
+
+
+
+
+    <section id="play">
+        <div class="container">
+            <h1>Intuitive Transition</h1>
+            <p>
+                Animations that more intuitive makes the user feel engaged.
+            </p>
+
+            <div class="btn">
+                <div class="rect">
+                    <div class="large-line"></div>
+                    <div class="s-line top"></div>
+                    <div class="s-line bottom"></div>
+                </div>
+                <div class="text">PLAY</div>
+            </div>
+
+        </div>
+</section>
+
+
     <script src="app.js"></script>
 </body>
 
