--- a/animation/microinteractions/index.html
+++ b/animation/microinteractions/index.html
@@ -131,18 +131,20 @@
 
     <section id="play">
         <div class="container">
-            <h1>Intuitive Transition</h1>
+            <h1>Animated Transition</h1>
             <p>
-                Animations that more intuitive makes the user feel engaged.
+                Animated Transition makes the user feel more engaged with the UI.
             </p>
 
             <div class="btn">
-                <div class="rect">
-                    <div class="large-line"></div>
-                    <div class="s-line top"></div>
-                    <div class="s-line bottom"></div>
+                <div class="rect-wrapper">
+                    <div class="rect">
+                        <div class="large-line"></div>
+                        <div class="s-line top"></div>
+                        <div class="s-line bottom"></div>
+                    </div>
                 </div>
-                <div class="text">PLAY</div>
+                <div class="text">PAUSE</div>
             </div>
 
         </div>
