--- a/animation/microinteractions/index.html
+++ b/animation/microinteractions/index.html
@@ -144,7 +144,7 @@
                         <div class="s-line bottom"></div>
                     </div>
                 </div>
-                <div class="text">PAUSE</div>
+                <div class="text">PLAY</div>
             </div>
 
         </div>
