--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h1 class="title">UI Components</h1>
         <section>
             <ul>
-                <li>Sticky Navigation Bar</li>
+                <li><a href="./ui-components/sticky-nav/">Sticky Navigation Bar</a></li>
                 <li>Responsive Navigation Bar</li>
                 <li>Cards</li>
                 <li>Panels</li>
