--- a/ui-components/sticky-nav/index.html
+++ b/ui-components/sticky-nav/index.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=E, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Sacramento&display=swap" rel="stylesheet"> 
-    <link href="./style.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Sacramento&display=swap"
+        rel="stylesheet">
+    <link href="./style.css" rel="stylesheet" type="text/css" />
     <title>Ella</title>
 </head>
+
 <body>
-    <nav class="default-nav">
-        <div class="container">
-            <h1 class="logo"> HUGO</h1>
+    <nav>
+        <div class="container flex">
+            <h2 class="logo"> HOMIX</h2>
+            <ul>
+                <li>LOCATIONS</li>
+                <li>OFFERS</li>
+            </ul>
         </div>
-    </nav >
+    </nav>
     <section>
-        <div class="container">section1</div>
-    </section>
+            <div class="container flex">
+                    <div class="text">
+                            <h1>Great Quality <br>with Great <br> Prices</h1>
+                        </div>
+                <img src="./img/table.png" style="width: 30%; ">
+                
+            </div>
+        </section>
     <section>
-        <div class="container">section2</div>
+        <div class="container flex">
+                <img src="./img/table2.png">
+
+            <div class="text">
+                <h1>Classly and Modern</h1>
+            </div>
+        </div>
     </section>
+
+
     <section>
-        <div class="container">section3</div>
+        <div class="container flex">
+                <div class="text">
+                <h1>Most Comfy Furniture</h1>
+            </div>
+            <img src="./img/sofa1.png">
+
+        </div>
     </section>
-    <section>
-        <div class="container">section4</div>
-    </section>
-    <section>
-        <div class="container">section5</div>
-    </section>
+
+
+
+
+
+
+
+
     <script src="./app.js"></script>
 </body>
+
 </html>
