--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
                 <li><a href="./animation/animations/">Animation</a></li>
                 <li><a href="./animation/sandbox/">Animation Sandbox</a></li>
                 <li><a href="./animation/microinteractions/">Microinteractions</a></li>
+                <li>Animation on scroll</li>
+                <li>Animation on Mouse Events</li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
         </section>
@@ -115,9 +117,7 @@
             <ul>
                 <li><a href="./ui-components/sticky-nav/">Sticky Navigation Bar</a></li>
                 <li>Responsive Navigation Bar</li>
-                <li>Cards</li>
-                <li>Panels</li>
-                <li>Sidebar</li>
+
                 <li>slideshow</li>
                 <li>Dropdown Menu</li>
                 <li>Mega menu </li>
