on hover button added

--- a/animation/microinteractions/index.html
+++ b/animation/microinteractions/index.html
@@ -35,13 +35,21 @@
             <p>Highlight the item the is being hovered over
                 to indicate user's location or that further actions can be taken.</p>
 
-
+            <!-- HOVER-1  -->
             <ul class="list">
                 <li>First item </li>
                 <li>Second item </li>
                 <li>Third item </li>
                 <li>Forth item </li>
             </ul>
+
+
+            <!-- HOVER-2  -->
+            <p style="padding-top: 7rem;">On hover animation can be added to draw more attention to CTA</p>
+            <div class="button">
+                <div class="text">GET IT</div>
+                <div class="anim"></div>
+            </div>
         </div>
     </section>
 
