animation on scroll

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <li><a href="./animation/animations/">Animation</a></li>
                 <li><a href="./animation/sandbox/">Animation Sandbox</a></li>
                 <li><a href="./animation/microinteractions/">Microinteractions</a></li>
-                <li>Animation on scroll</li>
+                <li><a href="./animation/animation-onscroll/">Animation on scroll</a></li>
                 <li>Animation on Mouse Events</li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
