section animation done

--- a/animation/animation-onscroll/index.html
+++ b/animation/animation-onscroll/index.html
@@ -8,10 +8,12 @@
     <title>Observer</title>
 </head>
 <body>
-    <section id="section-1">SECTION 1</section>
-    <section id="section-2">SECTION 2</section>
-    <section id="section-3">SECTION 3</section>
-    <section id="section-4">SECTION 4</section>
+    <section id="section-1" ><div class="text">SECTION 1</div></section>
+    <section id="section-2" ><div class="text">SECTION 2</div></section>
+    <section id="section-3" ><div class="text">SECTION 3</div></section>
+    <section id="section-4" ><div class="text">SECTION 4</div></section>
+    <section id="section-5" ><div class="text">SECTION 5</div></section>
+
 
     <script src="./app.js"></script>
 </body>
