--- a/index.html
+++ b/index.html
@@ -117,25 +117,22 @@
             <ul>
                 <li><a href="./ui-components/sticky-nav/">Sticky Navigation Bar</a></li>
                 <li>Responsive Navigation Bar</li>
-
-                <li>slideshow</li>
-                <li>Dropdown Menu</li>
+                <li>Tooltips and Popup message</li>
+                <li>Modal</li>
                 <li>Mega menu </li>
                 <li>accordion menu</li>
+                <li>highlighted menu</li>
+                <li>Sections based highlighted menu</li>
                 <li>Page transition animation</li>
-                <li>Tooltip</li>
-                <li>Popup message</li>
-                <li>Highlighting pulsal</li>
-                <li>Progress Bar</li>
+                <li>slideshow</li>
                 <li>Search with Autocomplete</li>
-                <li>Modal</li>
+                <li>Highlighting pulsal</li>
                 <li>Tabs</li>
                 <li>Pagination</li>
-                <li>Lazy Load Placeholders</li>
+                <li>Lazy Loading</li>
+                <li> Placeholders</li>
                 <li>Parallax</li>
                 <li>Drag and Drop</li>
-                <li>PROJECT-1</li>
-                <li>PROJECT-2</li>
             </ul>
         </section>
         <h1 class="title">HTML Graphics</h1>
