final (animation added to circles)

--- a/animation/animation-onscroll/index.html
+++ b/animation/animation-onscroll/index.html
@@ -10,8 +10,7 @@
     <title>Observer</title>
 </head>
 <body>
-    <div class="rect left"><div class="circle"></div></div>
-    <div class="rect right"><div class="circle"></div></div>
+
     <header>
         <div class="logo">
             <h1>FORTUNE</h1>
@@ -28,6 +27,8 @@
 
     
     <section id="section-1" ><div class="text"></div>
+        <div class="rect left"><div class="circle"></div></div>
+        <div class="rect right"><div class="circle"></div></div>
         <h2 class="light">Find your coworking space NOW!</h2>
         <input type="text" class="search-bar" placeholder="Enter your city name" autofocus/>
     </section>
@@ -58,6 +59,7 @@
                 <li>CONTACT</li>
                 <li>VISIT</li>
                 <li>RESERVE</li>
+                <li>MAKE IT YOURS</li>
             </ol>
         </div>
         <div class="right">
