final (arrows added to section 3)

--- a/animation/animation-onscroll/index.html
+++ b/animation/animation-onscroll/index.html
@@ -67,8 +67,8 @@
                 <li style="--color:#E4B1B3; --delay:0.3s"><img src="./SVG/search.svg"></li>
                 <li style="--color:#98B3B0; --delay:.6s"><img src="./SVG/contact.svg"></li>
                 <li style="--color:#70948F; --delay:1s"><img src="./SVG/visit.svg"></li>
-                <li style="--color:#EFE3D8; --delay:1.3s"><img src="./SVG/reserve.svg"></li>
-                <li style="--color:#E4D5CB; --delay:1.9s"><h4 class="regular">IT'S YOURS!</h4></li>
+                <li style="--color:#E4D5CB; --delay:1.3s"><img src="./SVG/reserve.svg"></li>
+                <li style="--color:#EFE3D8; --delay:1.9s"><h4 class="regular">IT'S YOURS!</h4></li>
             </ul>
         </div>
     </section>
