--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li><a href="./advanced-CSS/transform/">Transform</a></li>
                 <li>Filters</li>
                 <li>Blend Modes</li>
-                <li><a href="./Advanced-CSS/projects/panda/index.html">PROJECT-1: Panda Illustration</a></li>
+                <li><a href="./Advanced-CSS/panda/index.html">PROJECT-1: Panda Illustration</a></li>
             </ul>
         </section>
         
@@ -108,7 +108,7 @@
                 <li><a href="./animation/sandbox/">Animation Sandbox</a></li>
                 <li><a href="./animation/microinteractions/">Microinteractions</a></li>
                 <li><a href="./animation/animation-onscroll/">Animation on scroll</a></li>
-                <li>Animation on Mouse Events</li>
+                <li><a href="./animation/animation-onmouse/">Animation on Mouse Events</a></li>
                 <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
         </section>
