--- a/animation/animation-onmouse/index.html
+++ b/animation/animation-onmouse/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img src="./img/bamboo.svg" id="bamboo">
     <div class="wrapper"> 
         
         <div class="face">
