--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                 <li><a href="./responsive/savant-academy/">PROJECT-2: Savant Academy</a></li>
                 <li><a href="./responsive/project-3-setup/">PROJECT-3: Set up</a></li>
                 <li><a href="./responsive/cooks-hub/">PROJECT-3: Cooks Hub</a></li>
+                <li><a href="">Project-4: Set up</a></li>
+                <li><a href="">Project-4: Facebook landing page</a></li>
                 
             </ul>
         </section>
