--- a/responsive/facebook/index.html
+++ b/responsive/facebook/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./style/style.css" rel="stylesheet" type="text/css"/>
-    <title>Document</title>
+    <title>Facebook</title>
 </head>
 <body>
-    <script src="./app.js"></script>
+    
 </body>
 </html>
