tablet screen needs to be fixed

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                 <li><a href="./responsive/cooks-hub/">PROJECT-3: Cooks Hub</a></li>
                 <li><a href="./responsive/facebook-setup/">Project-4: Set up</a></li>
                 <li><a href="./responsive/facebook/">Project-4: Facebook landing page</a></li>
+                <li><a href="./responsive/twitter-setup/">Project-5: Set up</a></li>
+                <li><a href="./responsive/twitter/">Project-5: Twitter landing page</a></li>
                 
             </ul>
         </section>
