--- a/responsive/twitter/index.html
+++ b/responsive/twitter/index.html
@@ -6,25 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./style/style.css" rel="stylesheet" type="text/css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <title>Facebook</title>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">  
+     <title>Twitter</title>
 </head>
 <body>
-    <div class="container">
-        <div id="left">
+<div class="container">
+    <aside>
+        <div class="bg-wrapper">
             <img src="./SVG/logo.svg" >
-            <h1>Connect with friends and the world around you on Facebook.</h1>
         </div>
-        <div id="right">
-            <form >
-                <input type="text" placeholder="Email or Phone Number">
-                <input type="password" placeholder="Password">
-                <input type="submit" value="Login">
-                <a href="#">Forgot Password?</a>
-                <button>Create New Account</button>
-            </form>
-            <h5><a href="#">Create a Page</a> for a celebrity, band or business.</h5>
+    </aside>
+    <main>
+        <form>
+            <div class="form-wrapper">
+                <input type="text" placeholder="Phone, email or username">
+                <div class="password">
+                    <input type="password" placeholder="Password">
+                    <a href="#">Forgot password?</a>
+                </div>
+                <input type="submit" value="Log in">
+            </div>
+        </form>
+
+        <div class="flex-container">
+            <img src="./SVG/logo.svg" width="200">
+            <h1>Happening now</h1>
+            <h2>Join Twitter today.</h2>
+            <div class="buttons">
+                <div id="signup">Sign up</div>
+                <div id="login">Log in</div>
+            </div>
         </div>
-    </div>
+    </main>
+</div>
 </body>
 </html>
